src/test/success/redeclaring_function_as_parameter.egern
func abc(abc: int): int {
    return abc
}

print(abc(4))
