src/test/fail/return_only_in_while_fail.egern
func square(n: int): int {
    while (2 == 2)
        return n * n
    }
}

square(4);
